<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <Button
            android:text="@string/lesson1_button"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/first_lesson_button"/>
    <Button
            android:text="@string/lesson2_button"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/second_homework_game_button"/>
    <Button
            android:text="@string/lesson3_button"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/third_homework_service_starter_button"/>
    <Button
            android:text="@string/fragments_button_text"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fragments_activity_button"/>
    <Button
            android:text="@string/lesson4_button"
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fourth_homework_button"/>
</LinearLayout>